[project]
name = "llm-serving-platform"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "accelerate>=1.14.0",
    "fastapi>=0.139.2",
    "pydantic>=2.13.4",
    "torch>=2.13.0",
    "transformers>=5.14.1",
    "uvicorn>=0.51.0",
]

[[tool.uv.index]]
url = "https://download.pytorch.org/whl/cu130"
